--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>Flea In A Jar</title>
         <style>
+            *{
+                font-family: Arial, helvetica;
+            }
             body{
                 display: grid;
                 grid-template-rows: auto auto auto;
@@ -20,8 +23,8 @@
                     margin: 0px;
                     border: 1px solid palevioletred;
                 }
-                #dat1{padding: 3% 0;}
-                #dat2{padding: 2% 0 5% 0;}
+                #dat1{padding: 2% 0;}
+                /* #dat2{padding: 0 0 % 0;} */
                 #dat3{padding: 2% 0;}
                     .menu{
                         list-style-type: none;
@@ -44,9 +47,9 @@
                     padding: 50% 20%;
                 }
                 .text{
-                    padding: 10% 20%;
+                    padding: 5% 5%;
                 }
-            .footer {padding: 5% 0;}
+            /* .footer {padding: 5% 0;} */
         </style>
     </head>
 <body>
@@ -55,7 +58,6 @@
         <div id="dat2" style="line-height: 40px; font-family: Arial, helvetica;">
             <center>
                 <h1 style="font-size: 140px; text-shadow: 5px 5px gray; color: #a8030a;">Flea in a jar</h1>
-                <br/>
                 <br/>
                 <br/>
                 <br/>
@@ -75,12 +77,21 @@
     </div>
     <div class="content">
         <div class="image" style="border: 2px dashed gray;">
+            <p>Image of Bud here</p>
         </div>
         <div class="text" style="border: 2px dashed gray;">
+            <h1>Artist's Statement</h1>
+            <hr/>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla in tortor viverra, ornare eros eu, porta augue. Vestibulum sodales sagittis nisl, ac ultrices ex porta eget. Vivamus porta ultrices tempor. Nulla facilisi. In at neque urna. Aenean vestibulum suscipit molestie. Fusce sed mauris velit. Fusce lobortis libero quis tristique fringilla. Nullam pretium magna nec elit iaculis mattis. Nunc id posuere odio, quis malesuada mi. Nunc porttitor ex eget lobortis lobortis.<br/>
+                <br/>Proin accumsan sit amet urna id dapibus. Maecenas nisi augue, sagittis at urna sed, vulputate commodo massa. Integer dignissim consequat velit sed volutpat. Quisque viverra sagittis leo vitae suscipit. In sem nisl, tincidunt in neque at, euismod dignissim sapien. Maecenas non nisi vitae eros gravida blandit. Fusce orci magna, ornare id orci a, lacinia interdum sem. Etiam eu nibh bibendum, mattis sem eu, condimentum erat. Nulla sodales lorem sapien, sed semper turpis sodales sit amet. Quisque mi nulla, viverra vel pretium a, consectetur consequat massa. Morbi sit amet scelerisque sem. Donec dictum diam vitae sem elementum lacinia. Praesent blandit, sem eu efficitur vestibulum, ipsum est aliquet tellus, et rhoncus sapien est non nibh. Vestibulum bibendum nec leo vitae commodo. Proin eleifend neque volutpat, convallis turpis nec, pulvinar quam. Nulla nec pellentesque diam.
+            </p>
         </div>
     </div>
     <div class="footer">
-
+        <p style="text-align: center;">
+            Jo-Ri Solutions. Made with love. © 2023
+        </p>
     </div>
 </body>
 </html>
