--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                 <br/>
                 <p style="letter-spacing: 20px; color: #a8030a; font-size: 16px;"><b>TUKMA SOLO EXHIBITION 2023</b></p>
                 <br/>
-                <p style="color: white;">a catharsis to reduce stigma and to educate the public.<br/>
-                a reminder to others who are still caught like fleas in a jar.</p>
+                <p style="color: white;">Unleash the jar, Unleash the flea<br/>
+               A reminder to others who are still caught like fleas in a jar</p>
             </center>
             <div style="text-align: center;">
                 <span class="dots"></span>
