--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
         </div>
     </div>
     <div class="content">
-        <div class="image" style="border: 2px dashed gray;">
+        <div class="image">
             <img src="images/annonymous (2).png" width="80%">
         </div>
-        <div class="text" style="border: 2px dashed gray;">
+        <div class="text">
             <h1>Artist's Statement</h1>
             <hr/>
             <p>
@@ -161,7 +161,7 @@
     </div>
     <div class="footer">
         <p style="text-align: center;">
-            Jo-Ri Solutions. Made with love. © 2023
+            Jo-Ri Designs. Made with love. © 2023
         </p>
     </div>
 </body>
