--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                 grid-template: '.image' '.text';
             }
                 .image{
-                    /* padding: 30% 20%; */
+                    object-fit: cover;
+                    object-position: -20% 0;
+                    filter: drop-shadow(0, 5px, 5px black);
                 }
                 .text{
                     padding: 5% 5%;
