--- a/map.html
+++ b/map.html
@@ -29,7 +29,7 @@
                         text-decoration: none;;
                     }
             #content{
-                padding: 16% 0;
+                padding: 20% 0;
             }
             #footer{
                 padding: 3% 0;
@@ -43,13 +43,13 @@
                 MAP
             </p>
         </div>
-        <div class="lowersect">
+        <!-- <div class="lowersect">
             <ul class="menu">
                 <li><u>MAP</u></li>
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="index.html">HOME</a></li>
             </ul>
-        </div>
+        </div> -->
     </div>
     <div id="content">
 
