--- a/about.html
+++ b/about.html
@@ -3,18 +3,23 @@
     <head>
         <title>Flea In A Jar</title>
         <style>
-            *{margin: 0;}
+            *{
+                margin: 0;
+                font-family: Arial, Helvetica, sans-serif;
+            }
             body{
                 display: grid;
                 grid-template-columns: 15% auto;
-                grid-template-rows: auto auto "footer";
+                grid-template-rows: auto auto auto auto "footer";
+                background-image: url('images/sticker bg.png');
+                background-attachment: fixed;
             }
             #header, #content, #footer{
-                border: 1px solid magenta;
-                background-color: white;
-                z-index: 2;
+                /* border: 1px solid magenta; */
+                z-index: 3;
             }
                 .lowersect{
+                    background-color: teal;
                     grid-column: 1;
                     grid-row: 1;
                     border: 1px solid black;
@@ -36,7 +41,7 @@
                             background-color: gray;
                         }
                 .headers{
-                    padding: 12% 0;
+                    padding: 25% 0;
                 }
                 #headers{
                     grid-column: 2;
@@ -53,15 +58,18 @@
                 grid-column: 2;
                 grid-row: 2;
             }
-            #content div{
+            /* #content div{
                 border: 1px solid magenta;
-            }
+            } */
                 .aboutexhibition{
-                    padding: 20% 0;
-                    background-image: url('images/sticker bg.png');
+                    grid-column: 2;
+                    grid-row: 3;
+                    padding: 13% 0;
                     background-attachment: fixed;
                 }
                 .aboutpaintings{
+                    grid-column: 2;
+                    grid-row: 4;
                     padding: 40% 0;
                     background-image: url('images/print 1 bg.png');
                     background-size: 100% 150%;
@@ -69,8 +77,9 @@
                 }
             #footer{
                 grid-column: 2;
-                grid-row: 3;
+                grid-row: 5;
                 padding: 5% 0;
+                background-color: white;
             }
             table, td{
                 border: groove 3px grey;
@@ -80,19 +89,19 @@
 <body>
     <div class="lowersect">
         <ul class="menu">
-            <li><a href="map.html">MAP</a></li>
+            <a href="map.html"><li>MAP</li></a>
             <li><span style="margin: -20%;"><u>ABOUT</u></span></li>
-            <li><a href="index.html">HOME</a></li>
+            <a href="index.html"><li>HOME</li></a>
         </ul>
     </div>
-    <div id="header">
+    <div id="header" style="background-color: white;">
         <div class="headers">
             <p style="text-align: center; font-size: 40px;">
                 <b>ABOUT</b>
             </p>
         </div>
     </div>
-    <div id="content">
+    <div id="content" style="background-image: url('images/papertexturecutout.png');">
         <h1 style="text-align: center;"> WHO ARE IN JO-RI SOLUTIONS? </h1>
         <div class="creatorarea1">
             <table>
@@ -121,9 +130,10 @@
                 </tr>
             </table>
         </div>
-        <div class="aboutexhibition"></div>
-        <div class="aboutpaintings"></div>
+        <br/><br/><br/><br/><br/><br/><br/>
     </div>
+    <div class="aboutexhibition"></div>
+    <div class="aboutpaintings"></div>
     <div id="footer">
         <p style="text-align: center;">
             Jo-Ri Designs. Made with love. © 2023
