--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 /* #dat2{padding: 0 0 % 0;} */
                 /* #dat3{padding: 0 0;} */
             #dat3{
+                background-color: teal;
                 grid-column: auto;
                 grid-row: auto;
                 border: 1px solid black;
@@ -99,15 +100,15 @@
                 padding: 5% 0%;
                 display: grid;
                 grid-template: '.image' '.text';
-                background-color: white;
+                background-image: url('images/paper\ texture.jpg');
             }
                 .image{
-                    object-fit: cover;
-                    object-position: -20% 0;
-                    filter: drop-shadow(0, 5px, 5px black);
-                    background-color: white;
+                    object-fit: contain;
+                    object-position: -30% 40%;
+                    filter: drop-shadow(0 5px 7px black);
                 }
                 .text{
+                    border-left: 2px solid gray;
                     padding: 5% 5%;
                 }
              .footer {
@@ -127,7 +128,7 @@
     </div>
     <div class="header">
         <div class="click ar2"><p>&gt;</p></div>
-        <div id="dat1"><img src="images/flea logo final.png" width="8%" style="position: relative; left: 3%; top: 10%"></div>
+        <div id="dat1"><img src="images/flea logo final.png" width="8%" style="position: relative left: 3%; top: 10%;"></div>
         <div id="dat2" style="line-height: 40px; font-family: Arial, helvetica;">
             <center>
                 <h1 style="font-size: 140px; text-shadow: 5px 5px 5px black; color: #a8030a;">Flea in a jar</h1>
@@ -148,7 +149,7 @@
     </div>
     <div class="content">
         <div class="image">
-            <img src="images/annonymous (2).png" width="80%">
+            <img src="images/annonymous (2).png" width="80%" style="float: right;">
         </div>
         <div class="text">
             <h1>Artist's Statement</h1>
