--- a/about.html
+++ b/about.html
@@ -95,9 +95,9 @@
                 padding: 5% 0;
                 background-color: white;
             }
-            table, td{
+            /* table, td{
                 border: groove 3px grey;
-            }
+            } */
         </style>
     </head>
 <body>
@@ -138,8 +138,14 @@
                         <img src="images/placeholder2.jpg" width="60%" style="margin: 0 0 0 20%;">
                     </td>
                     <td style="width: 70%;">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ac sem a ante blandit vulputate. Aenean sit amet condimentum velit. Mauris non feugiat purus. In in suscipit sem, non tempor nulla. Integer tempus lorem pretium quam faucibus suscipit. Proin purus sapien, sagittis sed consequat vel, faucibus at libero. Sed malesuada nunc ac est lacinia, ullamcorper malesuada sem tempor. Vestibulum ac tempus ipsum. Sed accumsan nunc id feugiat eleifend. Sed mauris ex, lacinia quis dolor eu, gravida sollicitudin sapien. Aliquam sit amet sem arcu. Suspendisse laoreet nibh quam.
-                        Donec fermentum et quam sit amet imperdiet. Aliquam congue, erat quis feugiat congue, nisl dui luctus lectus, sit amet pretium neque quam vel massa. Nunc in maximus elit. Nulla semper dictum orci. Proin id pharetra odio. Ut at viverra lorem. Sed venenatis non nibh vel posuere. Fusce nisi justo, aliquet sit amet imperdiet porttitor, semper eu felis. Ut vestibulum, arcu eu pretium molestie, orci nisi feugiat ante, luctus tempus est est ut lectus.
+                        <strong>Rianne Gracielle M. Garcia</strong> is a multimedia artist whose mediums include traditional and digital
+                        artworks. Despite her love for digital art, she is always interested in exploring different media
+                        and materials. She is now a first year taking Bachelor of Information Technology, studying at
+                        Silliman University. Originally from Cebu City and currently residing in Dumaguete City, Negros
+                        Oriental. Involved in animation and manga at a young age, Rianne became interested in art.
+                        Having transferred from Cebu to Bacolod six times in grade school to high school, she has been
+                        able to advance and grow by participating in theater workshops and orgs. A dreamer who never
+                        gives up
                     </td>
                 </tr>
             </table>
@@ -174,7 +180,8 @@
     </div>
     <div id="footer">
         <p style="text-align: center;">
-            Jo-Ri Designs. Made with love. © 2023
+            Jo-Ri Designs. Made with love. © 2023 <br/>
+            <a href="contacts.html" style="text-decoration: none; color: black;">Contact Us!</a>
         </p>
     </div>
 </body>
