--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
     <div class="header">
         <div class="click ar2"><p>&gt;</p></div>
-        <div id="dat1"><img src="images/flea logo final.png" width="8%" style="position: relative left: 3%; top: 10%;"></div>
+        <div id="dat1"><img src="images/flea logo final.png" width="8%" style="position: relative; left: 3%; top: 10%;"></div>
         <div id="dat2" style="line-height: 40px; font-family: Arial, helvetica;">
             <center>
                 <h1 style="font-size: 140px; text-shadow: 5px 5px 5px black; color: #a8030a;">Flea in a jar</h1>
